<resources>
    <string name="about">About</string>
    <string name="about_copyright">CopyRight@2013-2016 9Apps All Rights Reserved</string>
    <string name="app_manager_app_install_phone">Installed in the Phone</string>
    <string name="app_manager_app_install_sdcard">Installed in the SdCard</string>
    <string name="app_manager_app_uninstall_all_count"><Data>&lt;/font> Total save &lt;font color=#00be67>%2$s&lt;/font> </Data></string>
    <string name="app_manager_app_version_size">Ver.%1$s <Data>&lt;font color=#d0d0d0>|&lt;/font></Data> %2$s</string>
    <string name="app_manager_uninstall">Uninstall</string>
    <string name="app_manager_uninstall_all">Uninstall All</string>
    <string name="app_name">9Apps</string>
    <string name="appmanage_uninstall">App Uninstall</string>
    <string name="auto_install_descrip">After download completed</string>
    <string name="auto_install_tittle">Auto install</string>
    <string name="be_careful">Be Careful</string>
    <string name="be_careful_tip">This apk has not been scanned by us.It may contain unknown problems.We suggest you to download the safe one via 9Apps.</string>
    <string name="bluetooth_open_error">bluetooth open error.</string>
    <string name="bluetooth_text_line1">Let your friend Open bluetooth and visible to all nearby bluetooth devices</string>
    <string name="bluetooth_text_line2">Click the \"Search and share\" button to search your friend</string>
    <string name="bluetooth_text_sharebutton">Search and share</string>
    <string name="button_continue">Continue</string>
    <string name="button_download">Download</string>
    <string name="button_install">Install</string>
    <string name="button_open">Open</string>
    <string name="button_pause">Pause</string>
    <string name="button_retry">Retry</string>
    <string name="button_update">Update</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="check_update_cancel">Cancel</string>
    <string name="check_update_dialog_later">Later</string>
    <string name="check_update_lastest_msg">This is lastest version!</string>
    <string name="check_update_progress_text">Loading…</string>
    <string name="check_update_progress_wait">please wait</string>
    <string name="check_update_sure">OK</string>
    <string name="clear_cache_message">Are you sure to clear cache?</string>
    <string name="clear_cache_progress">Clearing,waiting…</string>
    <string name="clear_cache_success">Cache cleared success</string>
    <string name="click_to_download">click to download</string>
    <string name="common_daily_3">Daily 3</string>
    <string name="common_thanks_text">Thanks</string>
    <string name="common_today_best">Today Best</string>
    <string name="daily_update_dialog_left_btn_text">Cruel leave</string>
    <string name="daily_update_dialog_right_btn_text">Try it now</string>
    <string name="daily_update_dialog_tittle">New Version</string>
    <string name="daily_update_dialog_version_text">"9APPS %1$s
UPDATE"</string>
    <string name="data_no_result">no datas</string>
    <string name="data_pack_delete">Datapack unziped successfully. Do you want to delete the zip file now?</string>
    <string name="data_package">Data package</string>
    <string name="delete_apk_after_install_descrip">Apk saved file /sdcard/9appsPro/downloader</string>
    <string name="delete_apk_after_install_tittle">Delete apk file after installation</string>
    <string name="delete_file_one_tips">Are you sure you want to delete this history record?</string>
    <string name="delete_local_file">Also delete local files</string>
    <string name="detail">Detail</string>
    <string name="detail_big">DETAIL</string>
    <string name="detail_rate_num">%1$d Rates</string>
    <string name="detail_rating_already">You have already rated!</string>
    <string name="detail_rating_least">You must select a star at least!</string>
    <string name="detail_version_time">Ver.%1$s | %2$s</string>
    <string name="dialog_NO">NO</string>
    <string name="dialog_cancle">Cancel</string>
    <string name="dialog_not_app_content">%1$s has not installed.Download now?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">YES</string>
    <string name="discover_sticker_album">Album</string>
    <string name="discover_sticker_album_count">%1$dP</string>
    <string name="discover_sticker_can_download"><Data> &lt;br/>&lt;font color=#00be67>%1$d&lt;/font> </Data>Sticker can download</string>
    <string name="discover_sticker_category">Category</string>
    <string name="discover_sticker_detail_save">Save</string>
    <string name="discover_sticker_detail_share_to">Share to</string>
    <string name="discover_sticker_download_all">Download All</string>
    <string name="discover_sticker_help_title">Sticker Help</string>
    <string name="discover_sticker_new">New</string>
    <string name="discover_sticker_recommend">Recommend</string>
    <string name="discover_sticker_top">Top</string>
    <string name="discover_title">E-LIFE</string>
    <string name="download">Download</string>
    <string name="download_button_click_text">See what others interested in</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_fragment_title">Download Manager</string>
    <string name="download_hint_music">music</string>
    <string name="download_hint_sticker">sticker</string>
    <string name="download_hint_video">video</string>
    <string name="download_hint_wallpaper">wallpaper</string>
    <string name="download_menu_delete">Delete</string>
    <string name="download_menu_setAs">Set as</string>
    <string name="download_menu_share">Share</string>
    <string name="download_no_data_hint">Aha! You have no download tasks now.</string>
    <string name="download_no_sdcard">No SD card,can not download!</string>
    <string name="download_play_file_not_exists">File not exists!</string>
    <string name="download_sure">OK</string>
    <string name="downloaded_text">Downloaded</string>
    <string name="downloading_text">Downloading</string>
    <string name="entertainment_music_global_top">Global Top</string>
    <string name="entertainment_music_indonesia_top">Indonesia Top</string>
    <string name="entertainment_music_new_release">New Release</string>
    <string name="entertainment_music_recommend">Recommend</string>
    <string name="entertainment_music_status_play">Play</string>
    <string name="entertainment_music_status_stop">Stop</string>
    <string name="entertainment_ringtone_category">Category</string>
    <string name="entertainment_ringtone_new">New</string>
    <string name="entertainment_ringtone_top">Top</string>
    <string name="feature">Feature</string>
    <string name="feedback_advice_text">Advice</string>
    <string name="feedback_detail_mis_text">Please describe your problem.</string>
    <string name="feedback_detail_text">Detail</string>
    <string name="feedback_email_text">Email</string>
    <string name="feedback_email_write_text">Enter your email…</string>
    <string name="feedback_emial_mis_text">Invalid E-mail address!</string>
    <string name="feedback_msg_text">Thanks for your suggestion!</string>
    <string name="feedback_problem_text">Problem</string>
    <string name="feedback_submit_text">Submit</string>
    <string name="feedback_tittle_text">FeedBack</string>
    <string name="feedback_write_text">Enter your advice or problem…</string>
    <string name="file_deleteed_tips">The file has been deleted, it will donwload again!</string>
    <string name="file_manager">File Manage</string>
    <string name="file_manager_delete_all">Delete All</string>
    <string name="file_manager_music_file_type">Music File</string>
    <string name="file_manager_ringtone_file_type">Ringtone File</string>
    <string name="file_manager_sticker_file_type">Sticker File</string>
    <string name="file_manager_video_file_type">Video File</string>
    <string name="file_manager_wallpaper_file_type">Wallpaper File</string>
    <string name="fils_share_failed">Files sharing failed, please try other ways</string>
    <string name="find_more_in_own">Find More in 9Apps</string>
    <string name="free">FREE</string>
    <string name="gift">GIFT</string>
    <string name="home_tab_best">BEST</string>
    <string name="home_tab_category">CATEGORY</string>
    <string name="home_tab_databack">DATA BACK</string>
    <string name="home_tab_game">TOP GAME</string>
    <string name="home_tab_music">MUSIC</string>
    <string name="information">Information</string>
    <string name="install">Install</string>
    <string name="install_via_9apps">Install via 9Apps</string>
    <string name="installer_size_text">Size</string>
    <string name="installer_version_text">Version</string>
    <string name="language">Language</string>
    <string name="manager_nofigication_service">Manage 9Apps notification</string>
    <string name="max_download_tasks">Max download tasks</string>
    <string name="net_error_des">"Gee, you're not connected to the internet."</string>
    <string name="net_error_subdes">Please check your internet connectivity and try again.</string>
    <string name="notify_recommendations_descrip">Update recommendations about hottest contents</string>
    <string name="notify_recommendations_tittle">Notify recommendations</string>
    <string name="notify_updates_descrip">Update messages about apps or games</string>
    <string name="notify_updates_tittle">Notify updates</string>
    <string name="set_alarm">Alarm</string>
    <string name="set_notification">Notification</string>
    <string name="set_ringtone">Ringtones</string>
    <string name="set_ringtone_titile">SET AS</string>
    <string name="sharing_by_facebook">Facebook</string>
    <string name="sharing_by_more">More</string>
    <string name="sharing_by_twitter">Twitter</string>
    <string name="sharing_by_whatsapp">WhatsApp</string>
    <string name="apps_buy_assistant_btn">Got it</string>
    <string name="apps_buy_assistant_desc1">Authorizing 9Apps Comparison without risk, which is high efficiency and rapid.</string>
    <string name="apps_buy_assistant_desc2">Please find and click the item in this page.</string>
    <string name="apps_buy_assistant_desc3">Switch it on to authorize.</string>
    <string name="apps_buy_assistant_title">Enable <Data>[ &lt;font color=#e62b30>&lt;b>9Apps Comparison&lt;/b>&lt;/font> ]</Data></string>
    <string name="auto_update_desc">The Auto-update will be activated only under Wi-Fi</string>
    <string name="auto_update_set">Wi-Fi Auto Update</string>
    <string name="e_life_daily_share_title">Share E-Life to Friends</string>
    <string name="optimization_recommendations_descrip">Optimize daily usage</string>
    <string name="optimization_recommendations_tittle">Optimization recommendations</string>
    <string name="screen_folder_apk">App</string>
    <string name="screen_folder_clean">Clear</string>
    <string name="screen_folder_file">File</string>
    <string name="screen_folder_more">More</string>
    <string name="screen_folder_search">Search</string>
    <string name="screen_folder_update">Update</string>
    <string name="setting_preload_description">Preload information to browse quickly with a little traffic</string>
    <string name="setting_preload_title">Preload</string>
    <string name="setting_save_data_descrip">No image when using 2G/3G Network</string>
    <string name="setting_save_data_tittle">Save data</string>
    <string name="theme_setting_desc_text">Use cool theme here.</string>
    <string name="theme_setting_title_text">Theme</string>
    <string name="window_demo">"All done! 9Apps Comparison begins to help you saving 
 money in every purchase!"</string>
    <string name="window_demo_cancle">Cancel</string>
    <string name="window_demo_view">View Demo</string>
</resources>