<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/e_life_daily_share_title" style="@style/e_life_daily_title_style" />
    <LinearLayout android:orientation="horizontal" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/facebook_layout" style="@style/e_share_layout_style">
            <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/sharing_ic_facebook" />
            <TextView android:textSize="@dimen/text_size_12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/sharing_by_facebook" android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout android:id="@id/twitter_layout" style="@style/e_share_layout_style">
            <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/sharing_ic_twitter" />
            <TextView android:textSize="@dimen/text_size_12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/sharing_by_twitter" android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout android:id="@id/whatsapp_layout" style="@style/e_share_layout_style">
            <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/sharing_ic_whatsapp" />
            <TextView android:textSize="@dimen/text_size_12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/sharing_by_whatsapp" android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout android:id="@id/more_layout" style="@style/e_share_layout_style">
            <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/sharing_ic_more" />
            <TextView android:textSize="@dimen/text_size_12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/sharing_by_more" android:includeFontPadding="false" />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/divider_layout" />
</LinearLayout>