<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#d7000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/apps_buy_assistant_layout" android:background="@color/white" android:paddingLeft="36.0dip" android:paddingTop="18.0dip" android:paddingRight="36.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/color_343434" android:gravity="center" android:layout_gravity="center" android:id="@id/apps_buy_assistant_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apps_buy_assistant_title" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_828282" android:gravity="left" android:layout_gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/apps_buy_assistant_desc1" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_343434" android:gravity="left" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/apps_buy_assistant_desc2" android:drawableLeft="@drawable/red_circle_bg_step_1" android:drawablePadding="6.0dip" />
        <ImageView android:background="@drawable/accessbility_step1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_343434" android:gravity="left" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/apps_buy_assistant_desc3" android:drawableLeft="@drawable/red_circle_bg_step_2" android:drawablePadding="6.0dip" />
        <ImageView android:background="@drawable/accessbility_step2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/color_ffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/got_it" android:background="@drawable/common_green_solid_corners_shape" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="18.0dip" android:text="@string/apps_buy_assistant_btn" />
    </LinearLayout>
</RelativeLayout>