<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/result_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/common_network_error" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_343434" android:id="@id/desc_txt1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/net_error_des" android:maxLines="1" />
    <TextView android:textSize="12.0sp" android:textColor="@color/color_828282" android:id="@id/desc_txt2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/net_error_subdes" android:singleLine="true" />
    <Button android:textSize="12.0sp" android:textColor="@color/color_00be67" android:gravity="center" android:id="@id/retry" android:background="@drawable/common_green_solid_corners_stroke_shape" android:layout_width="160.0dip" android:layout_height="32.0dip" android:layout_marginTop="55.0dip" android:text="@string/button_retry" />
</LinearLayout>