<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="6.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuClean" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/screen_folder_clean" android:drawableTop="@drawable/screen_folder_menu_clear_selector" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
    <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="14.0dip" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/screen_folder_update" android:drawableTop="@drawable/screen_folder_menu_update_selector" android:drawablePadding="4.0dip" android:layout_centerHorizontal="true" />
        <TextView android:textSize="10.0sp" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@id/update_count" android:background="@drawable/red_corner_bg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="14.0dip" android:layout_marginLeft="-12.0dip" android:layout_marginTop="10.0dip" android:text="32" android:layout_toRightOf="@id/menuUpdate" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuApk" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/screen_folder_apk" android:drawableTop="@drawable/screen_folder_menu_download_selector" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuFile" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/screen_folder_file" android:drawableTop="@drawable/screen_folder_menu_file_selector" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuSearch" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/screen_folder_search" android:drawableTop="@drawable/screen_folder_menu_search_selector" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@drawable/folder_menu_text_color_selector" android:gravity="center_horizontal" android:id="@id/menuMore" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/screen_folder_more" android:drawableTop="@drawable/screen_folder_menu_more_selector" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
</LinearLayout>