<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#99000000" android:paddingLeft="6.0dip" android:paddingTop="19.0dip" android:paddingRight="6.0dip" android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/lay_price_iv" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/window_demo" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
            <TextView android:textColor="@color/view_cancle" android:gravity="center_horizontal" android:id="@id/cancleBt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/window_demo_cancle" android:layout_weight="1.0" />
            <TextView android:textColor="@color/view_do" android:gravity="center_horizontal" android:id="@id/view_do" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/window_demo_view" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>